[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/main-screen/MainScreen.gd" type="Script" id=1]

[node name="MainScreen" type="Node"]

script = ExtResource( 1 )

[node name="startGameButton" type="Button" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 357.0
margin_top = 246.0
margin_right = 489.0
margin_bottom = 292.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Create Game"
flat = false
align = 1

[node name="joinGameButton" type="Button" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 358.0
margin_top = 303.0
margin_right = 486.0
margin_bottom = 348.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Join Game"
flat = false
align = 1

[node name="ipLineEdit" type="LineEdit" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 525.0
margin_top = 308.0
margin_right = 677.0
margin_bottom = 345.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
text = "127.0.0.1"
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = true
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Caret" ]

[node name="usernameLineEdit" type="LineEdit" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 525.0
margin_top = 246.0
margin_right = 657.0
margin_bottom = 287.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
text = "Brian"
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0

[connection signal="pressed" from="startGameButton" to="." method="_on_startGameButton_pressed"]

[connection signal="pressed" from="joinGameButton" to="." method="_on_joinGameButton_pressed"]

[connection signal="text_changed" from="ipLineEdit" to="." method="_on_ipLineEdit_text_changed"]

[connection signal="text_changed" from="usernameLineEdit" to="." method="_on_usernameLineEdit_text_changed"]


